UI and Views fix
Fixed the issues with add employee page
Fixed issues with views.py(Now displays the website properly)

To be added:
Edit page views.py code
Attendance if time allows

--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/add_employee.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/add_employee.html
@@ -21,19 +21,19 @@
         <h1> Create Employee Record </h1><hr>
         <h5> Personal Details </h5>
         <div class="form-row">
-          <div class="form-group col-md-3">
+          <div class="form-group col-md-4">
             <label for="inputFstName">First Name</label>
             <input type="text" class="form-control" id="inputFstName" name="inputFstName" placeholder="">
           </div>
-          <div class="form-group col-md-3">
+          <div class="form-group col-md-4">
             <label for="inputMidName">Middle Name</label>
             <input type="text" class="form-control" id="inputMidName" name="inputMidName" placeholder="">
           </div>
-          <div class="form-group col-md-3">
+          <div class="form-group col-md-4">
             <label for="inputLtName">Last Name</label>
             <input type="text" class="form-control" id="inputLtName" name="inputLtName" placeholder="">
           </div>
-          <div class="form-group col-md-3">
+          <div class="form-group col-md-6">
             <label for="inputPhone">Phone Number</label>
             <input type="number" class="form-control" id="inputPhone" name="inputPhone" step="1" placeholder="XXXX-XXX-XXXX">
           </div>
@@ -46,21 +46,15 @@
 
         <h5> Employment Details </h5>
         <div class="form-row">
-            <div class="form-group col-md-2">
+            <div class="form-group col-md-1">
                 <label for="inputID">ID Number</label>
                 <input type="text" class="form-control" id="inputID" name="inputID" placeholder="XXXXXX Not working">
             </div>
-            <div class="form-group col-md-4">
-                <label for="inputDept">Department</label>
-                <select id="inputDept" name="inputDept" class="form-control">
-                  <option selected>Choose Department</option>
-                  <option value="HR">HR</option>
-                  <option value="IT">IT</option>
-                  <option value="Sales">Sales</option>
-                  <option value="Accounting">Accounting</option>
-                </select>
+            <div class="form-group col-md-2">
+                <label for="inputJoinDate">Join Date</label>
+                <input type="date" class="form-control" id="inputJoinDate" name="inputJoinDate" placeholder="XXXXXX">
             </div>
-            <div class="form-group col-md-4">
+            <div class="form-group col-md-3">
                 <label for="inputEmpStat">Contract Status</label>
                 <select id="inputEmpStat" name="inputEmpStat" class="form-control">
                   <option selected>Choose Status</option>
@@ -70,52 +64,48 @@
                 </select>
             </div>
             <div class="form-group col-md-3">
+                <label for="inputDept">Department</label>
+                <select id="inputDept" name="inputDept" class="form-control">
+                  <option selected>Choose Department</option>
+                  <option value="HR">HR</option>
+                  <option value="IT">IT</option>
+                  <option value="Sales">Sales</option>
+                  <option value="Accounting">Accounting</option>
+                </select>
+            </div>
+            <div class="form-group col-md-3">
                 <label for="inputPosition">Employee Position</label>
                 <input type="text" class="form-control" id="inputPosition" name="inputPosition" placeholder="">
             </div>
-            <div class="form-group col-md-2">
-                <label for="inputJoinDate">Join Date</label>
-                <input type="date" class="form-control" id="inputJoinDate" name="inputJoinDate" placeholder="XXXXXX">
-            </div>
+            
         </div>
         <hr>
 
         <h5> Compensation Details </h5>
         <div class="form-row">
-            <div class="form-group col-md-3">
+            <div class="form-group col-md-4">
                 <label for="inputBankAccNo">Bank Account Number</label>
                 <input type="text" class="form-control" id="inputBankAccNo" name="inputBankAccNo" placeholder="">
             </div>
-            <div class="form-group col-md-3">
+            <div class="form-group col-md-4">
                 <label for="inputSalary">Salary</label>
                 <input type="number" step="0.01" class="form-control" id="inputSalary" name="inputSalary" placeholder="">
-            </div>
-            <div class="form-group col-md-3">
-                <label for="inputCOLA">COLA Earnings</label>
-                <input type="text" class="form-control" id="inputCOLA" name="inputCOLA" placeholder="">
-            </div>
-            <div class="form-group col-md-3">
-                <label for="inputCADeduc">C/A Deductions</label>
-                <input type="text" class="form-control" id="inputCADeduc" name="inputCADeduc" placeholder="">
-            </div>
-            <div class="form-group col-md-3">
-                <label for="inputCOOPDeduc">COOP Deductions</label>
-                <input type="text" class="form-control" id="inputCOOPDeduc" name="inputCOOPDeduc" placeholder="">
-            </div>
-            <div class="form-group col-md-3">
-                <label for="inputU/LDeduc">Uniform/Laptop Deductions</label>
-                <input type="text" class="form-control" id="inputU/LDeduc" name="inputU/LDeduc" placeholder="">
             </div>
         </div>
         <hr>
         <div class="footer-wrap">
             <div class="back-button">
+                <a class="btn btn-dark mx-3" href="{% url 'employee_database' %}" type="button">Back</a>
             </div>
             <ul class="action-icons">
-                <li><button class="btn btn-success mx-3" type="submit">Confirm</button></li>
+                <li><a class="btn btn-danger" href="{% url 'employee_database' %}" type="button">Cancel</a></li>
+                <li><button class="btn btn-success" type="submit">Confirm</button></li>
             </ul>
         </div>
     </form>
 
  </div>
+<footer>
+    
+</footer>
 {% endblock %}
