--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/base.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/base.html
@@ -4,16 +4,17 @@
 
 <head>
     <title>Silver Horizon Payroll App</title>
+
     <script src="{% static '/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static '/bootstrap/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" href="{% static '/bootstrap/css/custom.css' %}">
     <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/product-sans">
-
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
 
 </head>
 
@@ -64,7 +65,7 @@
                             <a href="{% url 'employee_database' %}" class="sidebar-link">Database</a>
                         </li>
                         <li class="sidebar-item">
-                            <a href="#" class="sidebar-link">Attendance</a>
+                            <a href="{% url 'attendance_db' %}" class="sidebar-link">Attendance</a>
                         </li>
                     </ul>
                 </li>
@@ -72,18 +73,6 @@
                 
             </ul>
             <div class="sidebar-footer">
-                <li class="sidebar-item">
-                    <a href="#" class="sidebar-link">
-                        <i class="lni lni-user"></i>
-                        <span>Profile</span>
-                    </a>
-                </li>
-                <li class="sidebar-item">
-                    <a href="#" class="sidebar-link">
-                        <i class="lni lni-cog"></i>
-                        <span>Setting</span>
-                    </a>
-                </li>
                 <a href="#" class="sidebar-link">
                     <i class="lni lni-exit"></i>
                     <span>Logout</span>
@@ -95,9 +84,6 @@
             {% endblock %}
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-        crossorigin="anonymous"></script>
     <script src="{% static '/js/script.js' %}"></script>
 </body>
 </html>
