Fixed Edit page
Again, please remember to name the HTML tags. The code searches for a name not ID

--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/employee_database.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/employee_database.html
@@ -26,9 +26,14 @@
             </ul>
         </div>
     </div>
+
     <div class="content">
         <h2>Employee Database</h2>
+        
         <div style="overflow-x:auto;">
+          {% for message in messages %}
+          <p{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</p>
+          {% endfor %}
             <table id="posts">
                 <thead>
                     <tr>
