--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/attendance_db.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/attendance_db.html
@@ -7,15 +7,8 @@
     <div class="dashboard-navbar">
         <form action="#">
             <div class="nav-search">
-                <input type="text" class="search-query mr-3" placeholder="Employee name or code...">
-                <select id="inputDept" class="search-query">
-                    <option selected >Department</option>
-                    <option value="HR">HR</option>
-                    <option value="IT">IT</option>
-                    <option value="Sales">Sales</option>
-                    <option value="Accounting">Accounting</option>
-                </select>
-                <button class="btn mx-3" type="button">Search</button>
+                <input type="text" class="search-query mr-3" placeholder="Name/Code" id="eName">
+                <input type="text" class="search-query px-3" id="eDepa" placeholder="Search Department" >
             </div>
         </form>
         <div class="navbar-content">
