--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/employee_database.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/employee_database.html
@@ -6,8 +6,8 @@
     <div class="dashboard-navbar">
         <form action="#">
           <div class="nav-search">
-            <input type="text" class="search-query mr-3" placeholder="Name/Code" onkeyup="searchName()" id="eName">
-            <input type="text" class="search-query px-3" id="eDepa" placeholder="Select Department/s" onkeyup="searchDepartment()">
+            <input type="text" class="search-query mr-3" placeholder="Search Name or ID" onkeyup="searchName()" id="eName">
+            <input type="text" class="search-query px-3" id="eDepa" placeholder="Search Department" onkeyup="searchDepartment()">
             <!-- Fixing the filter command <select id="inputDept" class="search-query">
                 <option selected >Department</option>
                 <option value="HR">HR</option>
