--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/login.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/login.html
@@ -4,46 +4,42 @@
 <html>
     <head>
         <title>Log In</title>
-        
-        <link rel="stylesheet" href="{% static '/bootstrap/css/bootstrap.min.css' %}">
-        <link rel="stylesheet" href="{% static '/bootstrap/css/custom.css' %}">
-        <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/product-sans">
 
         <script src="{% static '/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-        <link rel="stylesheet" href="static/css/style.css">
+        <link rel="stylesheet" href="{% static 'css/style.css' %}">
+        <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/product-sans">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+            crossorigin="anonymous">
+        </script>
     </head>
 
-    <body style="background-color:#D7D7D7;">
-        
-        <div class="container my-4">
-            <div class="row">
-                <div class="col"></div>
-                <div class="col-4">
-                    <form method="POST" action="" style="background-color:white;" class="container py-8 border rounded"> 
-                        <div class="text-center">
-                            <img class= "login_logo" src="{% static '/sh logo.png' %}"> 
-                            <h3> Log In </h3> 
-                        </div>
-                        <div class="form-group my-2">
-                            <label for="userlogin">Username</label>
-                            <input type="text" class="form-control" id="userlogin" name="userlogin"
-                                placeholder="Enter Username" required>
-                        </div>
-                        <div class="form-group my-2">
-                            <label for="pwlogin">Password</label>
-                            <input type="password" class="form-control" id="pwlogin" name="pwlogin"
-                                placeholder="Enter Password" required>
-                        </div>
-                        <a href="{% url 'dashboard' %}" class="btn my-2 btn-primary" type="submit">Log In</a>
-                        <p><a href="#" style="color:#861D1A"> Forgot Password? </a></p>
-                    </form>
-                </div>
-                <div class="col"></div>
-            </div>
+    <body>
+        <div class="container-login">
+            <div class="wrap-login">
+                <form class="login-form" method="POST" action=""> 
+                    <div class="text-center">
+                        <img class= "login_logo" src="{% static '/sh logo.png' %}"> 
+                        <h3> Log In </h3> 
+                    </div>
+                    <div class="form-group my-2">
+                        <label for="userlogin">Username</label>
+                        <input type="text" class="form-control" id="userlogin" name="userlogin"
+                            placeholder="Enter Username" required>
+                    </div>
+                    <div class="form-group my-2">
+                        <label for="pwlogin">Password</label>
+                        <input type="password" class="form-control" id="pwlogin" name="pwlogin"
+                            placeholder="Enter Password" required>
+                    </div>
+                    <a href="{% url 'dashboard' %}" class="btn my-2 btn-primary" type="submit">Log In</a>
+                    <a href="#" style="color:#861D1A"> Forgot Password? </a>
+                </form>
+            </div>      
         </div>
-
     </body>
 </html>
