--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/base.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/base.html
@@ -47,10 +47,10 @@
                             <a href="{% url 'generate_page' %}" class="sidebar-link">Generate</a>
                         </li>
                         <li class="sidebar-item">
-                            <a href="#" class="sidebar-link">Credit & Deductibles</a>
+                            <a href="{% url 'tax_module' %}" class="sidebar-link">Credit & Deductibles</a>
                         </li>
                         <li class="sidebar-item">
-                            <a href="#" class="sidebar-link">Encode</a>
+                            <a href="{% url 'encode_page' %}" class="sidebar-link">Encode</a>
                         </li>
                     </ul>
                 </li>
