--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/add_employee.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/add_employee.html
@@ -48,7 +48,7 @@
         <div class="form-row">
             <div class="form-group col-md-1">
                 <label for="inputID">ID Number</label>
-                <input type="text" class="form-control" id="inputID" name="inputID" placeholder="XXXXXX Not working">
+                <input type="text" class="form-control" id="inputID" name="inputID" placeholder="XXX000" readonly>
             </div>
             <div class="form-group col-md-2">
                 <label for="inputJoinDate">Join Date</label>
