--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/attendance_db.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/attendance_db.html
@@ -14,7 +14,7 @@
         <div class="navbar-content">
             <ul class="main-nav">
                 <div class="nav-search">
-                    <button type="button" class="btn btn-primary"><i class="lni lni-upload"></i> Upload Attendance</button>           
+                    <a href="{% url 'upload_attendance' %}" class="btn">+ Upload Attendance</a>                              
                 </div>
             </ul>
         </div>
